feat: dinosaur jump function

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 </head>
 <body>
     
+    <div class="container">
+        <h2 class="alert"></h2>
+        <div class="desert">
+            <div class="dinosaur"></div>
+        </div>
+    </div>
 
     <!-- Scripts -->
     <script src="js/main.js"></script>
