feat: generateCactus function

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     
     <div class="container">
+        <button class="start">Start Game</button>
         <h2 class="alert"></h2>
         <div class="desert">
             <div class="dinosaur"></div>
