--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     
     <div class="container">
-        <button class="start">Start Game</button>
+        <button class="restart">Restart Game</button>
         <h2 class="alert"></h2>
         <div class="desert">
             <div class="dinosaur"></div>
